--- a/snippets/site-logo.liquid
+++ b/snippets/site-logo.liquid
@@ -36,7 +36,7 @@
     </a>
     {%- else -%}
     {%- assign shop_name_length = shop.name.size -%}
-    <a href="/" itemprop="url" {% if shop_name_length > 10 %} class="site-header__shop-name--small"{% endif %}>{{ shop.name }}</a>
+    <a href="/" itemprop="url" {% if shop_name_length > 10 %} class="site-header__shop-name--small"{% endif %}>Shop name</a>
     {%- endif -%}
     {%- if template.name != 'index' -%}
   </div>
