--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -6737,15 +6737,15 @@ p a:not(.button):focus,
 }
 .modal-header .close {
   z-index: 10;
-  padding: 0;
+  padding: 2px;
   position: absolute;
-  top: 24px;
-  right: 24px;
+  top: 18px;
+  right: 18px;
   opacity: 1;
   background-color: transparent;
-  color:var(--g-color-heading);
-  height: 36px;
-  width:36px;
+  color:#ffffff !important;
+  height: 12px;
+  width:12px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -6755,7 +6755,7 @@ p a:not(.button):focus,
   transform: rotate(0);
   transition:transform 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
   text-shadow: 1px 0px var(--g-color-heading);
-  border:9px solid transparent;
+  border:2px solid transparent;
 }
 .modal-header .close:after,.modal-header .close:before{
     content: '';
@@ -6765,10 +6765,11 @@ p a:not(.button):focus,
     top: 50%;
     left: 0;
     margin-top: -1px;
-    background-color: var(--g-color-heading);
+    background-color: white;
     transform-origin: 50% 50%;
     opacity: 1;
     transition: transform ease 0.3s;
+    
 }
 .modal-header .close:after{
     transform: rotate(-45deg);
