--- a/snippets/pnew-3.liquid
+++ b/snippets/pnew-3.liquid
@@ -25,8 +25,19 @@
                 </div>
             {%- endif -%}
             <div class="popup-newsletter--content pt-4 text-center px-lg-5 pb-lg-5 pb-4 px-4"> 
+                {%- if pnewsletter_logo != blank -%}
+                    <div class="newsletter-logo mb-3 text-center">
+                        <img 
+                            src="{{ pnewsletter_logo | image_url: width: 300 }}" width="100" height="200"
+                            alt="{{ pnewsletter_logo.alt | escape }}" 
+                            class="img-fluid mx-auto"
+                            loading="lazy"
+                        >
+                    </div>
+                {%- endif -%}
+
                 {%- if subtitle != blank -%}
-                    <div class="subtop mb-3">{{ subtitle }}</div>
+                    <div class="subtop popup-newsletter--subtitle mb-3">{{ subtitle }}</div>
                 {%- endif -%}
                 {% if pnewletter_title != blank %}
                 <h3 class="modal-title popup-newsletter--title mb-2  {{ pnew_size_heading }}">
