--- a/sections/pnewsletter.liquid
+++ b/sections/pnewsletter.liquid
@@ -14,6 +14,9 @@
     justify-content: center;
    border-radius: 50%;
   }
+  .bg-pnewsletter:hover {
+    border:2px solid gray;
+  }
 {% endstyle %}
 {%- if section.settings.pnewletter_enable -%}
   {%- liquid
@@ -38,8 +41,8 @@
     <div class="modal-dialog modal-dialog--newsletter modal-dialog-centered" role="document">
       <div class="modal-content modal-content--newsletter">
         <div class="modal-header p-0">
-          <div class="bg-pnewsletter">
-            <button type="button" class="close close-newsletter" data-dismiss="modal" aria-label="close" >{%- render 'icon-close' -%}</button>
+          <div type="button" aria-label="close" data-dismiss="modal"  class="bg-pnewsletter">
+            <button type="button" class="close close-newsletter"  >{%- render 'icon-close' -%}</button>
           </div>
         </div>
         {%- liquid
