--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,6 +1,23 @@
 <!doctype html>
 <html class="no-js " lang="{{ shop.locale }}">
   <head>
+    <link rel="preload" href="https://cdn.shopify.com/s/files/1/0951/2996/0767/files/Rumble_Brave_f1532df5-5539-434f-85b4-9b0aa7611378.woff2?v=1754985561" as="font" type="font/woff2" crossorigin>
+
+<style>
+@font-face {
+  font-family: "Rumble Brave";
+  src: url("https://cdn.shopify.com/s/files/1/0951/2996/0767/files/Rumble_Brave_f1532df5-5539-434f-85b4-9b0aa7611378.woff2?v=1754985561") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+p, span, div, ul, ol, li,
+a, button, input, select, option,
+label, legend, textarea, small {
+  font-family: "Rumble Brave", serif !important;
+}
+</style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
