--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2533,13 +2533,13 @@ label[for] {
 }
 .font-family-1 {
   
-  font-family: var(--g-font-1) !important;
+  font-family: "Rumble Brave", serif !important ;
 }
 .font-family-2 {
-  font-family: var(--g-font-2) !important;
+  font-family: var(--g-font-2) ;
 }
 .font-family-3 {
-  font-family: var(--g-font-3) !important;
+  font-family: var(--g-font-3);
 }
 .fs-140{
   font-size: 140px;
