--- a/sections/carousel-special.liquid
+++ b/sections/carousel-special.liquid
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="col-12 col-md-7 offset-md-5">
           {%- if section.settings.title != blank -%}
-            <h3 class="text-uppercase carousel-title" data-aos="{{ section.settings.animation }}" data-aos-duration="300">{{ section.settings.title }}</h3>
+            <h3 class="text-uppercase carousel-title" data-aos="{{ section.settings.animation }}" data-aos-duration="300">{{ section.settings.title }} HELLO NEPAL</h3>
           {%- endif -%}
         </div>
       </div>
