--- a/sections/product-tab.liquid
+++ b/sections/product-tab.liquid
@@ -13,7 +13,7 @@
     when 4
     assign column = ' col-lg-3 col-6'
     when 5
-    assign column = 'col'
+    assign column = ' col-lg-1 col-6'
     when 6
     assign column = ' col-lg-2 col-6'
   endcase
