--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -95,6 +95,10 @@
     </div>
   </div>
     </div>
+  <div class="d-flex justify-content-center align-items-center">
+    <button class="bg-black">All Collection</button>
+
+  </div>
   </div>
 </div>
 </div>
