--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,9 +11,11 @@
   font-style: normal;
   font-display: swap;
 }
-span,div,h3 {
-  font-family: "Rumble Brave", serif !important;
 
+p, span, div, ul, ol, li,
+a, button, input, select, option,
+label, legend, textarea, small {
+  font-family: "Rumble Brave", serif !important;
 }
 </style>
     <meta charset="utf-8">
