--- a/sections/slideshow-1.liquid
+++ b/sections/slideshow-1.liquid
@@ -16,6 +16,11 @@
 .slideshow-wrapper {
   position: relative;
 }
+.mega-subtitle .slideshow__subtitle {
+font-size: 20px;
+  line-height: 1.5;
+  font-weight: 400;
+}
 
 .slideshow {
   position: unset;
@@ -266,9 +271,9 @@ html:not(.no-js) .slideshow.slick-initialized .slideshow__slide{
 
 .slideshow__title {
   font-weight: var(--g-slide-font-weight);
-  font-size: var(--g-slide-font-size);
-  line-height: var(--g-slide-font-lineheight);
-  letter-spacing:var(--g-slide-font-spacing);
+  font-size: 72px;
+  line-height: revert;
+  letter-spacing:normal;
   text-transform: var(--g-slide-font-transform);
 }
 @media (min-width:992px) {
