--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -3189,13 +3189,14 @@ h6:last-child,
   font-family: var(--g-font-2);
 }
 .subtop {
-  font-family: var(--g-font-2);
-  font-weight: var(--g-font-weight-subtop);
-  font-size: var(--g-font-size-subtop);
-  line-height: 26px;
-  letter-spacing: var(--g-font-spacing-subtop);
-  text-transform: uppercase;
-  color: var(--g-font-color-subtop);
+  font-family: Poppins !important;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 1.4px;
+text-transform: uppercase;
+
 }
 h1,
 .h1 {
