best seller done

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2100,7 +2100,8 @@ input.spr-summary-actions-newreview:hover {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  text-transform: var(--g-text-transform-btn);
+  text-transform: capitalize;
+  /* text-transform: var(--g-text-transform-btn); */
   /* font-size: var(--g-font-size-btn);
   line-height: 1;
   font-weight: var(--g-font-weight-btn); */
