--- a/sections/product-tab.liquid
+++ b/sections/product-tab.liquid
@@ -44,6 +44,13 @@
   background-color:rgba(var(--g-color-heading-rgb),1);
   color:white;
 }
+.font-tabs{
+      font-family: Rumble Brave;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+}
 {%- endstyle -%}
 <div class="customstyle{{ section.id }} "  data-aos="{{ section.settings.animation }}" >
   {%- render 'style-section' -%}
@@ -61,7 +68,7 @@
               data-draggable="{{ section.settings.draggable }}" 
               data-infinite="{{ section.settings.infinite }}"
                 >
-        <div class="text-center mt-n4 mb-5">
+        <div class="text-left font-tabs mt-n4 mb-5">
           <ul class="nav nav-tabs nav-tabs-1 d-inline-flex style-{{ style_tab }}" role="tablist">
             {%- for block in section.blocks -%}
             <li class="nav-item" role="presentation">
