--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2121,11 +2121,13 @@ input.spr-summary-actions-newreview:hover {
 }
 .btn-outline{
   text-transform: var(--g-text-transform-btn);
-  font-size: var(--g-font-size-btn);
-  line-height: 18px;
+  /* font-size: var(--g-font-size-btn); */
+  font-size: 18px;
+  line-height: normal;
   font-weight: var(--g-font-weight-btn);
   background-color: transparent;
-  font-family: var(--g-font-family_btn);
+  /* font-family: var(--g-font-family_btn); */
+  font-family: "Gilda Display";
   letter-spacing: var(--g-font-spacing-btn);
   border-radius: var(--g-font-radius-btn);
   padding: calc(var(--g-padding-ver-btn) - 4px) var(--g-padding-hoz-btn);
