--- a/sections/instagram-customize.liquid
+++ b/sections/instagram-customize.liquid
@@ -36,7 +36,8 @@
           {% case block.type %}
             {% when 'image' %}
             <div class="{% if section.settings.padding == false %} col px-0 {% else %} col {% endif %}  carousel__slide-wrapper--{{ block.id }}" {{ block.shopify_attributes }}>
-              <div class="position-relative hv-image-brightness instagramoff-item social-item"  data-aos="{{ section.settings.animation }}"  data-aos-delay="{{ forloop.index | times: 100 }}" >
+              {% assign iconss = block.settings.social_icon | upcase %}
+              <div class="position-relative hv-image-brightness  {% if iconss == "INSTAGRAM" %}instagramoff-item {% endif %}"  data-aos="{{ section.settings.animation }}"  data-aos-delay="{{ forloop.index | times: 100 }}" >
                 {%- if block.settings.image != blank -%}
                 <a  href="{{ block.settings.image_link }}" title="{{ block.settings.image.alt | escape }}" class="image-content__image-wrapper" style="padding-top:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100 }}%;">
                   {% assign img_url = block.settings.image | image_url: width: 1 | replace: 'width=1', 'width={width}' %}
@@ -398,6 +399,12 @@
           "type": "url",
           "id": "image_link",
           "label": "Image link to"
+        },
+        {
+          "type": "text",
+          "id": "social_icon",
+          "label": "Social Icon",
+          "default": "Instagram"
         }
       ]
     },
