--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2099,12 +2099,16 @@ input.spr-summary-actions-newreview:hover {
   -moz-appearance: none;
   appearance: none;
   text-transform: var(--g-text-transform-btn);
-  font-size: var(--g-font-size-btn);
+  /* font-size: var(--g-font-size-btn);
   line-height: 1;
-  font-weight: var(--g-font-weight-btn);
+  font-weight: var(--g-font-weight-btn); */
   background-color: var(--g-cta-button);
   color: var(--g-cta-text);
-  font-family: var(--g-font-family_btn);
+  font-family: "Gilda Display";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
   letter-spacing: var(--g-font-spacing-btn);
   border-radius: var(--g-font-radius-btn);
   position: relative;
@@ -2566,7 +2570,13 @@ label[for] {
   font-size: calc(var(--g-font-size) + 1px);
 }
 .fz-2 {
-  font-size: calc(var(--g-font-size) + 2px);
+  /* font-size: calc(var(--g-font-size) + 2px);  */
+font-family: "Gilda Display";
+font-size: 28px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-transform: capitalize;
 }
 .fz-3 {
   font-size: calc(var(--g-font-size) + 3px);
@@ -3189,13 +3199,14 @@ h6:last-child,
   font-family: var(--g-font-2);
 }
 .subtop {
-  font-family: var(--g-font-2);
-  font-weight: var(--g-font-weight-subtop);
-  font-size: var(--g-font-size-subtop);
-  line-height: 26px;
-  letter-spacing: var(--g-font-spacing-subtop);
-  text-transform: uppercase;
-  color: var(--g-font-color-subtop);
+font-family: Poppins !important;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 1.4px;
+text-transform: uppercase;
+
 }
 h1,
 .h1 {
